# motoko

./: AUTHORS  CREDITS  Makefile.am  Makefile.in  aclocal.m4  bootstrap  config.h.in  configure  configure.ac
autom4te.cache/: output.0  output.1  output.2  output.3  output.4  output.5  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
data/: Makefile.am  Makefile.in  motoko.conf.default  plugin.conf.default  wrequest.db.default
lib/: Makefile.am  Makefile.in
lib/libwardenc/: CREDITS  Makefile.am  Makefile.in  aclocal.m4  bootstrap  config.h.in  configure  configure.ac
lib/libwardenc/autom4te.cache/: output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4
lib/libwardenc/src/: Makefile.am  Makefile.in  wardenc.c  wardenc.h  wcrypt.c  wcrypt.h  winapi.c  winapi.h  wmodule.c  wmodule.h  wtypes.h  wutil.c  wutil.h
lib/libwardenc/wardendump/: Makefile.am  Makefile.in  wardendump.c
lib/plugins/: Makefile.am  Makefile.in
lib/plugins/bncs_login/: Makefile.am  Makefile.in  bncs_login.c
lib/plugins/d2gs_chicken/: Makefile.am  Makefile.in  d2gs_chicken.c
lib/plugins/d2gs_dclone/: Makefile.am  Makefile.in  d2gs_dclone.c
lib/plugins/d2gs_meph/: Makefile.am  Makefile.in  d2gs_meph.c
lib/plugins/d2gs_pathing/: Makefile.am  Makefile.in  d2gs_pathing.c  exits.h  levels.h  mazes.h
lib/plugins/d2gs_pes/: Makefile.am  Makefile.in  d2gs_pes.c
lib/plugins/d2gs_pickit/: Makefile.am  Makefile.in  d2gs_pickit.c
lib/plugins/d2gs_record/: Makefile.am  Makefile.in  d2gs_record.c
lib/plugins/d2gs_record/replay/: replay.c  replay.h
lib/plugins/mcp_game/: Makefile.am  Makefile.in  mcp_game.c
lib/plugins/mcp_login/: Makefile.am  Makefile.in  mcp_login.c
lib/util/: Makefile.am  Makefile.in  compat.c  config.c  curses.c  error.c  file.c  list.c  net.c  string.c  system.c
lib/util/include/util/: compat.h  config.h  curses.h  error.h  file.h  list.h  net.h  string.h  system.h  types.h
src/: Makefile.am  Makefile.in  bncs.c  bncs.h  clientman.c  clientman.h  d2gs.c  d2gs.h  gui.c  gui.h  hash.c  hash.h  internal.c  internal.h  main.c  mcp.c  mcp.h  module.h  moduleman.c  moduleman.h  packet.c  packet.h  settings.h
src/data/: item_codes.h  monster_fields.h  monster_names.h  skills.h  super_uniques.h
