libdir = @libdir@/@PACKAGE@/plugins
lib_LTLIBRARIES = libbncs_login_plugin.la
libbncs_login_plugin_la_SOURCES = bncs_login.c
libbncs_login_plugin_la_CFLAGS = -g -fvisibility=hidden -m32 -Wall
libbncs_login_plugin_la_CPPFLAGS = -I$(top_srcdir)/src -I$(top_srcdir)/lib/util/include
libbncs_login_plugin_la_LDFLAGS = -release 0.1.0
